# solmint

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  theme.js
frontend/src/components/: Layout.js
frontend/src/components/defi/: LendingPool.js  LiquidityPool.js  Staking.js
frontend/src/components/layout/: Header.js
frontend/src/contexts/: WalletContextProvider.js
frontend/src/pages/: CreateToken.js  Dashboard.js  DeFi.js  Landing.js  TokenStaking.js  TokenSwap.js
programs/: Cargo.toml
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
programs/launchpad/: Cargo.toml
programs/launchpad/src/: lib.rs
programs/lending/: Cargo.toml
programs/lending/src/: lib.rs
programs/liquidity-pool/: Cargo.toml
programs/liquidity-pool/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
programs/token-creator/: Cargo.toml
programs/token-creator/src/: lib.rs
programs/token-verification/: Cargo.toml
programs/token-verification/src/: lib.rs
