[package]
name = "solmint-lending"
version = "0.1.0"
edition = "2021"
description = "Solmint Lending Program - Advanced token lending and borrowing platform"
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "0.10"
num-derive = "0.3"
num-traits = "0.2"
