[package]
name = "solmint-token-creator"
version = "0.1.0"
edition = "2021"
description = "Solmint Token Creator Program - Create and manage Solana tokens with advanced features"
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "0.10"
num-derive = "0.3"
num-traits = "0.2"
